--- a/WizardWarzRotW/MainMenu.xaml
+++ b/WizardWarzRotW/MainMenu.xaml
@@ -5,15 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
-             d:DesignHeight="540" d:DesignWidth="540">
+             d:DesignHeight="810" d:DesignWidth="810">
     <Grid Background="Black">
-        <Label x:Name="label" Content="Number   of   Players" Height="64" FontSize="32
-               " Margin="115,205,118,271" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center" Width="307"  />
-        <Button x:Name="FourPlayerButton" Content="4" Width="256" Height="64" FontSize="48" PreviewMouseDown="FourPlayerButton_PreviewMouseDown" PreviewTouchDown="FourPlayerButton_PreviewTouchDown" Margin="142,274,142,202" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" Background="#FFFFBE00" BorderBrush="#FF10266E" BorderThickness="4" />
-        <Button x:Name="SixPlayerButton" Content="6" Width="256" Height="64" FontSize="48" PreviewMouseDown="SixPlayerButton_PreviewMouseDown" PreviewTouchDown="SixPlayerButton_PreviewTouchDown" Margin="142,393,142,83" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" Background="#FFFFBE00" BorderBrush="#FF10266E" BorderThickness="4"  />
-        <Image HorizontalAlignment="Left" Height="75" Margin="115,15,0,0" VerticalAlignment="Top" Width="293" Source="Resources/Wizard .png" Stretch="Fill"/>
-        <Image HorizontalAlignment="Left" Height="66" Margin="142,95,0,0" VerticalAlignment="Top" Width="251" Source="Resources/Warz.png"/>
-        <Label x:Name="label_Copy" Content="DYNA-WIZARDZ" FontSize="32" Margin="10,498,314,0" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center"  />
-        <Label x:Name="label_Copy1" Content="© NSQUARED SYDNEY" FontSize="24" Margin="308,502,4,-4" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center" Width="228"  />
+        <Label x:Name="label" Content="Number   of   Players" Height="64" FontSize="46
+               " Margin="212,256,158,490" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center" Width="440"  />
+        <Button x:Name="FourPlayerButton" Content="4" FontSize="48" PreviewMouseDown="FourPlayerButton_PreviewMouseDown" PreviewTouchDown="FourPlayerButton_PreviewTouchDown" Margin="267,374,235,354" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" Background="#FFFFBE00" BorderBrush="#FF10266E" BorderThickness="4" />
+        <Button x:Name="SixPlayerButton" Content="6" FontSize="48" PreviewMouseDown="SixPlayerButton_PreviewMouseDown" PreviewTouchDown="SixPlayerButton_PreviewTouchDown" Margin="267,572,235,156" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" Background="#FFFFBE00" BorderBrush="#FF10266E" BorderThickness="4"  />
+        <Image HorizontalAlignment="Left" Height="75" Margin="234,17,0,0" VerticalAlignment="Top" Width="357" Source="Resources/Wizard .png" Stretch="Fill"/>
+        <Image HorizontalAlignment="Left" Height="66" Margin="273,97,0,0" VerticalAlignment="Top" Width="306" Source="Resources/Warz.png"/>
+        <Label x:Name="label_Copy" Content="©wizard team" FontSize="36" Margin="4,752,562,0" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center"  />
+        <Label x:Name="label_Copy1" Content=" NSQUARED SYDNEY" FontSize="36" Margin="505,752,0,-4" Foreground="White" FontFamily="/WizardWarzRotW;component/Resources/#ArcadeClassic" HorizontalAlignment="Center" Width="305"  />
     </Grid>
 </UserControl>
